# agro_decision_orchestrator

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: digital_greenhouse_knowledge_capture_and_orchestrator_integration_strategy.md  greenhouse_knowledge_capture_example_constanta_v1.md  greenhouse_knowledge_capture_template.md  lessons_learned.md  orchestrator_validation_measurement_framework.md  product_claims_and_next_decision.md  project_log.md  validated_behavior_review.md
docs/handoff/: current_handoff.md
inputs/greenhouse_blueprints/: reference_tomato_greenhouse.json
inputs/sample_cases/: case_borderline_hydraulic_degradation.json  case_collapse_boundary_sector_prioritization.json  case_communication_loss_partial_blindness.json  case_confirmatory_near_threshold_hydraulics.json  case_constrained_emergency_alternative_water_supply.json  case_controlled_irrigation_rationing.json  case_early_warning_hydraulic_softening.json  case_emergency_alternative_water_supply.json  case_high_humidity_disease_risk.json  case_low_tank_supply_uncertainty.json  case_low_water_hydraulic_instability.json  case_main_pump_degradation.json  case_manual_override_mismatch.json  case_sector_prioritization_under_water_constraint.json  case_sensor_drift_flatline.json  case_slight_hydraulic_degradation_threshold.json  case_tighter_sector_prioritization_under_water_constraint.json  case_uncertain_emergency_alternative_water_supply.json
src/agro_do/bridge/: loader.py
src/agro_do/decision_orchestrator/: __init__.py  llm_orchestrator.py  orchestrator.py
(+6 files in other folders)
