[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agro-decision-orchestrator"
version = "0.1.0"
description = "A modular decision-support product prototype for greenhouse irrigation, climate, and fertigation systems."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Francisco Requena Alcaraz" }
]
keywords = [
  "agriculture",
  "greenhouse",
  "decision-support",
  "irrigation",
  "fertigation",
  "climate-control",
  "process-intelligence"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "pydantic>=2.7,<3.0"
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0"
]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.10,<2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
mypy_path = "src"